prevent more layout shifts

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -56,8 +56,7 @@ li {
 }
 
 strong,
-p,
-.toolcard-span {
+p {
 	font-size: 1.125rem;
 	line-height: 155%;
 	letter-spacing: 0.005em;
